--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <!-- <script src="s2animate.js"></script> -->
     <!-- <script src="s3manyCircles.js"></script> -->
     <script src="s4manyCircles2.js"></script>
+    <!-- <script src="s5connectParticles.js"></script> -->
 </body>
 </html>
